fix: turnier-table too small on mobile

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -227,7 +227,7 @@ nav .active {
 #turniere-table {
 	border-collapse: collapse;
 	table-layout: fixed;
-	font-size: calc(100svw / 32);
+	font-size: calc(100svw / 10);
 	margin: auto;
 }
 
@@ -291,6 +291,9 @@ nav .active {
 		/* display: grid; */
 		/* grid-template-columns: repeat(auto-fill, minmax(20em, 1fr)); */
 	}
+	#turniere-table {
+		font-size: calc(100svw / 12);
+	}
 }
 
 @media screen and (min-width:768px) {
@@ -350,6 +353,9 @@ nav .active {
 		grid-row: 2;
 		grid-column: 1 / 3;
 	}
+	#turniere-table {
+		font-size: calc(100svw / 16);
+	}
 	.news {
 		width: 68em;
 	}
@@ -361,6 +367,9 @@ nav .active {
 @media screen and (min-width:1200px) {
 	body {
 		padding: .5rem;
+	}
+	#turniere-table {
+		font-size: calc(100svw / 20);
 	}
 	footer > aside > div:nth-child(1) {
 
